omni/tests/goldens/types/unknown_type_03.err
tests/goldens/types/unknown_type_03.omni:1:12: error: unknown type "Mystery3"
     1 | let value3:Mystery3 = 1
       |            ^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_03.omni:1:1: error: type mismatch: cannot assign int to Mystery3
     1 | let value3:Mystery3 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery3 or change the variable type to int
